--- a/web_site/app/static/partials/landing.html
+++ b/web_site/app/static/partials/landing.html
@@ -1,34 +1,38 @@
 <div class="row form-actions">
 	<form class="form-inline" name="crawlerForm" ng-submit="crawlerFormSubmit()">
 		<div class="form-group">
-			<input type="search" class="form-control" required="required" ng-model="query" placeholder="Наименование товара" autocomplete="on" />
+			<input type="search" class="form-control" required="required" ng-model="query" placeholder="Наименование товара" size="50" />
 		</div>
 		<button type="submit" class="btn btn-primary" ng-disabled="crawlerForm.$error.required || submitting">Поиск</button>
 	</form>
 </div>
 
-<div class="row" ng-show="minimumProduct">
-	Товар с минимальной стоимостью: <a href="{{minimumProduct.url}}">{{minimumProduct.url}}</a> - {{minimumProduct.price}} р.
-</div>
-
-<div class="row table-row" ng-repeat="resource in data">
-	<table class="table table-hover">
-		<caption>Магазин: {{resource._id}}</caption>
-		<thead>
-			<tr>
-				<th scope="col">Название</th>
-				<th scope="col">Ссылка</th>
-				<th scope="col">Стоимость, р.</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="product in resource.products">
-				<td>{{product.name}}</td>
-				<td>
-					<a target="_blank" href="{{product.url}}">{{product.url}}</a>
-				</td>
-				<td>{{product.price}}</td>
-			</tr>
-		</tbody>
-	</table>
+<div class="row" ng-show="showResult">
+    <uib-tabset active="active">
+        <uib-tab index="0" heading="Результат">
+            <p ng-show="data.length > 0" style="margin-top: 10px;">
+                <a href="{{minimumProduct.url}}">Товар с минимальной стоимостью = </a>{{minimumProduct.price}} р.
+            </p>
+            <p ng-show="data.length === 0" style="margin-top: 10px;">Нет данных</p>
+        </uib-tab>
+        <uib-tab index="$index + 1" ng-repeat="resource in data" heading="{{resource._id}}">
+            <table class="table table-hover">
+                <caption>Магазин: <a href="{{resource._id}}">{{resource._id}}</a>, товаров: {{resource.products.length}}</caption>
+                <thead>
+                <tr>
+                    <th scope="col">Товар</th>
+                    <th scope="col">Стоимость, р.</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="product in resource.products">
+                    <td>
+                        <a target="_blank" href="{{product.url}}">{{product.name}}</a>
+                    </td>
+                    <td>{{product.price}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </uib-tab>
+    </uib-tabset>
 </div>
