--- a/web_site/app/templates/index.html
+++ b/web_site/app/templates/index.html
@@ -1,24 +1,19 @@
 <!doctype html>
 <html lang="en" ng-app="App">
 	<head>
+        <base href="/">
 		<meta charset="utf-8">
 		<title>Shop spider</title>
 
-		<!--<link rel="stylesheet" href="../static/css/bootstrap.css">-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../static/css/main.css">
 
-		<script src="../static/lib/angular/angular.js"></script>
-		<script src="../static/lib/angular/angular-resource.js"></script>
+        <script src="../static/lib/vendor/vendor.js"></script>
+        <script src="../static/lib/vendor/require.js"></script>
 
 		<script src="../static/js/app.js"></script>
 		<script src="../static/js/controllers.js"></script>
 		<script src="../static/js/services.js"></script>
-
-		<!--<script src="../static/lib/jquery/jquery.min.js"></script>-->
-		<!--<script src="../static/lib/bootstrap/bootstrap.min.js"></script>-->
-		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
@@ -36,8 +31,6 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="/">Главная</a></li>
-						<!--<li><a href="/">About</a></li>
-						<li><a href="/">Contact</a></li>-->
 					</ul>
 				</div>
 			</div>
